Kopie require a require dev z noveho web-projektu pro aktualnost. Funguje nahrávání a uprava obrázků v postu. Chybí funkce delete, resize a Exif rotation.

--- a/config/local.neon
+++ b/config/local.neon
@@ -5,3 +5,17 @@ database:
 	dsn: 'mysql:host=md392.wedos.net;dbname=d337245_mallcom'
 	user: a337245_mallcom
 	password: DXQEwJM6
+
+extensions:
+	imageStorage: Contributte\ImageStorage\DI\ImageStorageExtension
+
+imageStorage:
+	data_path: %wwwDir%/data                            # Filesystem location
+	data_dir: data                                      # Relative path
+	orig_path: %wwwDir%/../data                         # Original images dir (if is null, will be same as data_path)
+	algorithm_file: sha1_file                           # Algorithm to take image prefix directory from
+	algorithm_content: sha1                             # ...
+	quality: 85                                         # Default quality when cropping
+	default_transform: fit                              # Default crop transformation
+	noimage_identifier: images/noimage/no-image.png     # No-image image
+	friendly_url: false                                 # Create friendly URLs?
