--- a/composer.json
+++ b/composer.json
@@ -13,22 +13,36 @@
 		}
 	],
 	"require": {
-		"php": ">=8.1",
+		"php": ">= 8.1",
 		"nette/application": "^3.1",
-		"nette/bootstrap": "^3.1",
+		"nette/bootstrap": "^3.2",
+		"nette/caching": "^3.2",
 		"nette/database": "^3.1",
-		"nette/di": "^3.0",
+		"nette/di": "^3.1",
 		"nette/forms": "^3.1",
-		"nette/http": "^3.1",
+		"nette/http": "^3.2",
+		"nette/mail": "^4.0",
+		"nette/robot-loader": "^4.0",
 		"nette/security": "^3.1",
-		"nette/utils": "^3.2",
-		"latte/latte": "^2.11 || ^3.0",
-		"tracy/tracy": "^2.8"
+		"nette/utils": "^4.0",
+		"latte/latte": "^3.0",
+		"tracy/tracy": "^2.9",
+		"contributte/image-storage": "^3.0",
+		"claviska/simpleimage": "^2.5"
+	},
+	"require-dev": {
+		"nette/tester": "^2.4",
+		"symfony/thanks": "^1"
 	},
 	"autoload": {
 		"psr-4": {
 			"App\\": "app"
 		}
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"config": {
+		"allow-plugins": {
+			"symfony/thanks": true
+		}
+	}
 }
