--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
 		"nette/utils": "^4.0",
 		"latte/latte": "^3.0",
 		"tracy/tracy": "^2.9",
-		"contributte/image-storage": "^3.0",
-		"claviska/simpleimage": "^2.5"
+		"contributte/image-storage": "^3.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4",
