--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
-	"name": "nette-examples/user-authentication",
+	"name": "recipes",
 	"type": "project",
 	"license": "BSD-3-Clause",
 	"authors": [
 		{
-			"name": "David Grudl",
-			"homepage": "https://davidgrudl.com"
+			"name": "Mallcumek",
+			"homepage": "https://krsik.com"
 		},
-		{
-			"name": "Nette Community",
-			"homepage": "https://nette.org/contributors"
-		}
+		
 	],
 	"require": {
 		"php": ">= 8.1",
